@@ -1,0 +1,10 @@
+
+#Example code Giselle wrote for the purpose of being able to call methods of this file from main.py
+'''class Calendar:
+    def __init__(self):
+
+        self.test #Initializes the "test" method
+
+    def test(self): #test method
+        print("test")'''
+
