@@ -28,3 +28,8 @@
     Planned for upcoming tasks
     Assigned tasks for team
     Planned next meeting Thursday 1900
+
+2025-03-31 Giselle Johnson <gigiischic@gmail.com>
+    Did test to figure out method calling accross .py files
+    Testing worked
+    Wrote example comments into code for easy reference
